--- a/crates/client_api/Cargo.toml
+++ b/crates/client_api/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+reqwest = { workspace = true }
+thiserror = { workspace = true }
