--- a/crates/client_api/Cargo.toml
+++ b/crates/client_api/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+lazy_static = "1.5.0"
+
 reqwest = { workspace = true }
 thiserror = { workspace = true }
