--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-lol-game-client-api = { git = "https://github.com/chanmaoganda/LoLGameClientAPI.git" }
 client_api = { path = "crates/client_api" }
-tokio = "1.38.0"
+tokio = { workspace = true }
 
 [workspace]
 members = [
@@ -14,6 +13,7 @@ members = [
 ]
 
 [workspace.dependencies]
+tokio = {version = "1.38.0", features = ["full"] }
 reqwest = { version = "0.12.5", features = ["json"] }
 anyhow = "^1.0"
 thiserror = "^1.0"
