--- a/crates/client_api/Cargo.toml
+++ b/crates/client_api/Cargo.toml
@@ -10,3 +10,5 @@ lazy_static = "1.5.0"
 
 reqwest = { workspace = true }
 thiserror = { workspace = true }
+anyhow = { workspace = true }
+tokio = { workspace = true }
