--- a/crates/lcu_api/Cargo.toml
+++ b/crates/lcu_api/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "client_api"
+name = "lcu_api"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+sysinfo = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-lazy_static = "1.5.0"
-
 reqwest = { workspace = true }
 thiserror = { workspace = true }
-anyhow = { workspace = true }
-tokio = { workspace = true }
+
+lazy_static = "1.5.0"
+base64 = { version = "0.22.1" }
