--- a/crates/client_api/Cargo.toml
+++ b/crates/client_api/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 [dependencies]
 serde = { workspace = true }
 serde_json = { workspace = true }
-lazy_static = "1.5.0"
-
+league_model = { workspace = true }
 reqwest = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 tokio = { workspace = true }
+
+lazy_static = "1.5.0"
