--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-client_api = { path = "crates/client_api" }
-lcu_api = { path = "crates/lcu_api" }
-league_model = { path = "crates/league_model" }
+client_api = { workspace = true }
+lcu_api = { workspace = true }
+league_model = { workspace = true }
+gui ={ workspace = true }
 
-# druid = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
 serde = { workspace = true }
@@ -18,18 +18,22 @@ serde_json = { workspace = true }
 members = [
     "crates/client_api",
     "crates/lcu_api",
-    "crates/league_model"
+    "crates/league_model",
+    "crates/gui"
 ]
 
 [workspace.dependencies]
 tokio = {version = "1.38.0", features = ["full"] }
 reqwest = { version = "0.12.5", features = ["json"] }
-anyhow = "^1.0"
+anyhow = "1.0"
 thiserror = "^1.0"
 druid = "0.8.3"
 sysinfo = { version = "0.30.12" }
 regex = { version = "1.5.4" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-league_model = { path = "crates/league_model" }
 
+league_model = { path = "crates/league_model" }
+client_api = { path = "crates/client_api" }
+lcu_api = { path = "crates/lcu_api" }
+gui = { path = "crates/gui" }
