--- a/crates/lcu_api/Cargo.toml
+++ b/crates/lcu_api/Cargo.toml
@@ -11,6 +11,6 @@ reqwest = { workspace = true }
 thiserror = { workspace = true }
 league_model = { workspace = true }
 anyhow = { workspace = true }
+lazy_static = { workspace = true }
 
-lazy_static = "1.5.0"
 base64 = { version = "0.22.1" }
