--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,10 @@ sysinfo = { version = "0.30.12" }
 regex = { version = "1.5.4" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+env_logger = "0.11.3"
+log = { version = "0.4.22"}
+lazy_static = "1.5.0"
+
 
 league_model = { path = "crates/league_model" }
 client_api = { path = "crates/client_api" }
